--- a/.env
+++ b/.env
@@ -28,14 +28,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-# MAIL_DRIVER=sendmail
-# MAIL_HOST=smtp.gmail.com
-# MAIL_PORT=587
-# MAIL_USERNAME=webguro82@gmail.com
-# MAIL_PASSWORD=ryuzgqibrndwrzzr
-# MAIL_ENCRYPTION=tls
-# MAIL_FROM_ADDRESS=webguro82@gmail.com
-# MAIL_FROM_NAME="${APP_NAME}"
+MAIL_DRIVER=sendmail
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=webguro82@gmail.com
+MAIL_PASSWORD=ryuzgqibrndwrzzr
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=webguro82@gmail.com
+MAIL_FROM_NAME="${APP_NAME}"
 
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
@@ -45,10 +45,6 @@ MAIL_PASSWORD=ryuzgqibrndwrzzr
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=webguro82@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
-
-
-
-
 
 
 AWS_ACCESS_KEY_ID=
